# Lab4

./: CMakeLists.txt  structs.c  structs.h
T1/: in.txt  main.c
T2/: in.txt  instructions.txt  main.c
T5/: expression_process.c  expression_process.h  in1.txt  in2.txt  main.c  structs.c  structs.h
T6/: in.txt  main.c
T7/: in.txt  main.c
